6893 add docs
